--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,54 +1,57 @@
-name: Java Appium Tests
+name: Android Appium Tests
 
 on:
   push:
+    branches: [main]
   pull_request:
 
 jobs:
-  android-tests:
+  android-emulator-tests:
     runs-on: ubuntu-latest
     env:
       ANDROID_HOME: /usr/local/lib/android/sdk
-      PATH: ${{ env.ANDROID_HOME }}/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$ANDROID_HOME/emulator:$PATH
+      PATH: ${{ env.ANDROID_HOME }}/emulator:${{ env.ANDROID_HOME }}/tools:${{ env.ANDROID_HOME }}/tools/bin:${{ env.ANDROID_HOME }}/platform-tools:$PATH
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Java
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: temurin
-          java-version: '17'
+          java-version: 17
 
-      - name: Install Maven dependencies
-        run: mvn clean install -DskipTests
+      - name: Accept Android licenses
+        run: yes | sdkmanager --licenses
 
-      - name: Install Android SDK
+      - name: Install required Android SDK packages
         run: |
-          sudo mkdir -p $ANDROID_HOME
-          sudo chown -R $USER:$USER $ANDROID_HOME
-          yes | sdkmanager --sdk_root=$ANDROID_HOME "platform-tools" "platforms;android-33" "emulator" "system-images;android-33;google_apis;x86_64"
-          echo "y" | avdmanager create avd -n test_emulator -k "system-images;android-33;google_apis;x86_64" --device "pixel"
+          sdkmanager "platform-tools" "platforms;android-33" "system-images;android-33;google_apis;x86_64" "emulator"
 
-      - name: Start Android Emulator
+      - name: Start Android emulator
         run: |
-          $ANDROID_HOME/emulator/emulator -avd test_emulator -no-window -no-audio &
+          echo "no" | avdmanager create avd -n test_emulator -k "system-images;android-33;google_apis;x86_64" --force
+          nohup emulator -avd test_emulator -no-snapshot -no-audio -no-window -gpu swiftshader_indirect &
           adb wait-for-device
-          adb shell input keyevent 82
+          adb shell input keyevent 82 # unlock screen
+        shell: bash
 
-      - name: Run Appium server
-        run: |
-          npm install -g appium
-          appium --log-level error &
-          sleep 10
+      - name: Build the app
+        run: ./gradlew assembleDebug
 
-      - name: Run Tests
-        run: mvn test
+      - name: Run Appium tests
+        run: ./gradlew connectedAndroidTest
 
-      - name: Upload Test Reports
+      - name: Generate GitHub Actions summary
         if: always()
-        uses: actions/upload-artifact@v4
+        uses: actions/github-script@v6
         with:
-          name: appium-test-report
-          path: target/surefire-reports/
+          script: |
+            const fs = require('fs');
+            const reportPath = 'app/build/reports/androidTests/connected/flavors/debug/index.html';
+            if (!fs.existsSync(reportPath)) {
+              console.log('Nenhum relatório encontrado, pulando summary.');
+              return;
+            }
+            github.actions.summary.addRaw(`### Android Appium Tests Summary\n[View Report](${reportPath})`).write();
