--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,61 +1,82 @@
-name: Mobile Automation Tests
+name: Mobile Automation Tests - Appium
 
 on:
   push:
   pull_request:
 
 jobs:
-  android-appium-tests:
+  appium-tests:
     runs-on: ubuntu-latest
 
-    env:
-      ANDROID_HOME: /usr/local/lib/android/sdk
-      PATH: /usr/local/lib/android/sdk/emulator:/usr/local/lib/android/sdk/tools:/usr/local/lib/android/sdk/tools/bin:/usr/local/lib/android/sdk/platform-tools:$PATH:$PATH
-
     steps:
-
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          persist-credentials: true
+          clean: true
 
-      - name: Install dependencies
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 11
+
+      - name: Install Android SDK tools
         run: |
           sudo apt-get update
-          sudo apt-get install -y openjdk-11-jdk maven unzip tar curl
+          sudo apt-get install -y unzip curl wget
+          mkdir -p $HOME/android-sdk
+          export ANDROID_HOME=$HOME/android-sdk
+          export PATH=$ANDROID_HOME/emulator:$ANDROID_HOME/tools:$ANDROID_HOME/tools/bin:$ANDROID_HOME/platform-tools:$PATH
+          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+          unzip cmdline-tools.zip -d $ANDROID_HOME
+          mkdir -p $ANDROID_HOME/cmdline-tools/latest
+          mv $ANDROID_HOME/cmdline-tools/* $ANDROID_HOME/cmdline-tools/latest/
+          yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
+          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
 
-      - name: Show versions
+      - name: Verify environment
         run: |
           java -version
-          javac -version
-          mvn -version
           adb version
+          echo $ANDROID_HOME
 
-      - name: Build project with Maven
-        run: mvn clean install -B
+      - name: Build Maven project
+        run: mvn clean install
 
       - name: Run Appium tests
         run: mvn test
 
-      - name: Generate test summary
+      - name: Generate GitHub Actions summary
         if: always()
-        run: |
-          REPORT_FILE="target/surefire-reports/TEST-*.xml"
-          if compgen -G "$REPORT_FILE" > /dev/null; then
-            echo "### Test Summary" >> $GITHUB_STEP_SUMMARY
-            for f in $REPORT_FILE; do
-              TEST_NAME=$(xmllint --xpath "string(//testsuite/@name)" "$f")
-              FAILURES=$(xmllint --xpath "string(//testsuite/@failures)" "$f")
-              ERRORS=$(xmllint --xpath "string(//testsuite/@errors)" "$f")
-              PASSED=$(xmllint --xpath "string(//testsuite/@tests)" "$f")
-              echo "- **$TEST_NAME** | Passed: $PASSED | Failures: $FAILURES | Errors: $ERRORS" >> $GITHUB_STEP_SUMMARY
-            done
-          else
-            echo "No test reports found." >> $GITHUB_STEP_SUMMARY
-          fi
-
-      - name: Upload test reports
-        uses: actions/upload-artifact@v4
+        uses: actions/github-script@v6
         with:
-          name: appium-test-report
-          path: |
-            target/surefire-reports
-            target/screenshots
+          script: |
+            const fs = require('fs');
+            const path = 'target/surefire-reports/testng-results.xml';
+            if (!fs.existsSync(path)) {
+              console.log('Nenhum report encontrado, pulando summary.');
+              return;
+            }
+            const parseString = require('xml2js').parseString;
+            const xml = fs.readFileSync(path, 'utf8');
+            parseString(xml, (err, result) => {
+              if (err) {
+                console.error('Erro ao ler XML', err);
+                return;
+              }
+              let summary = `### Appium Tests Summary\n\n`;
+              summary += `| Test | Status |\n| --- | --- |\n`;
+              const suites = result.testng.testsuite;
+              suites.forEach(suite => {
+                suite.test.forEach(t => {
+                  t.class.forEach(c => {
+                    c.test.forEach(tc => {
+                      summary += `| ${tc.$.name} | ${tc.$.status} |\n`;
+                    });
+                  });
+                });
+              });
+              github.actions.summary.addRaw(summary).write();
+            });
