--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -22,19 +22,29 @@ jobs:
           distribution: temurin
           java-version: 11
 
-      - name: Install Android SDK tools
+      - name: Install Android SDK and platform-tools
         run: |
           sudo apt-get update
-          sudo apt-get install -y unzip curl wget
-          mkdir -p $HOME/android-sdk
+          sudo apt-get install -y unzip wget curl
+          mkdir -p $HOME/android-sdk/cmdline-tools
           export ANDROID_HOME=$HOME/android-sdk
-          export PATH=$ANDROID_HOME/emulator:$ANDROID_HOME/tools:$ANDROID_HOME/tools/bin:$ANDROID_HOME/platform-tools:$PATH
+          export PATH=$ANDROID_HOME/emulator:$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$PATH
+
+          # Baixar e extrair o Command Line Tools
           wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
           unzip cmdline-tools.zip -d $ANDROID_HOME/cmdline-tools
           mkdir -p $ANDROID_HOME/cmdline-tools/latest
           mv $ANDROID_HOME/cmdline-tools/cmdline-tools/* $ANDROID_HOME/cmdline-tools/latest/
+
+          # Aceitar licenças e instalar platform-tools
           yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
           $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
+
+      - name: Verify installations
+        run: |
+          java -version
+          adb version
+          echo $ANDROID_HOME
 
       - name: Verify environment
         run: |
