--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,4 +1,4 @@
-name: Mobile Automation Tests - Appium
+name: Appium Mobile Tests
 
 on:
   push:
@@ -8,67 +8,62 @@ jobs:
   appium-tests:
     runs-on: ubuntu-latest
 
-    env:
-      ANDROID_HOME: ${{ runner.temp }}/android-sdk
-      PATH: ${{ runner.temp }}/android-sdk/emulator:${{ runner.temp }}/android-sdk/tools:${{ runner.temp }}/android-sdk/tools/bin:${{ runner.temp }}/android-sdk/platform-tools:$PATH
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Java 11
+      - name: Setup Java 11
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 11
 
-      - name: Install Android SDK command line tools
+      - name: Set Android environment variables
         run: |
-          mkdir -p $ANDROID_HOME
-          curl -o sdk-tools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
-          unzip sdk-tools.zip -d $ANDROID_HOME
-          rm sdk-tools.zip
-          yes | $ANDROID_HOME/cmdline-tools/bin/sdkmanager --sdk_root=$ANDROID_HOME --licenses
-          $ANDROID_HOME/cmdline-tools/bin/sdkmanager --sdk_root=$ANDROID_HOME "platform-tools" "platforms;android-33" "emulator"
+          echo "ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
+          echo "PATH=$HOME/android-sdk/cmdline-tools/latest/bin:$HOME/android-sdk/emulator:$HOME/android-sdk/platform-tools:$PATH" >> $GITHUB_ENV
 
-      - name: Create and start emulator
+      - name: Install Android SDK Command-line Tools
         run: |
-          echo "no" | $ANDROID_HOME/cmdline-tools/bin/avdmanager create avd -n test -k "system-images;android-33;google_apis;x86_64" --force
+          mkdir -p $ANDROID_HOME/cmdline-tools
+          curl -o cmdline-tools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+          unzip cmdline-tools.zip -d $ANDROID_HOME/cmdline-tools
+          mv $ANDROID_HOME/cmdline-tools/cmdline-tools $ANDROID_HOME/cmdline-tools/latest
+          rm cmdline-tools.zip
+
+      - name: Accept SDK licenses
+        run: yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
+
+      - name: Install SDK packages
+        run: |
+          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-33" "system-images;android-33;google_apis;x86_64"
+
+      - name: Create AVD
+        run: |
+          echo "no" | $ANDROID_HOME/cmdline-tools/latest/bin/avdmanager create avd -n test -k "system-images;android-33;google_apis;x86_64" --force
+
+      - name: Start Emulator
+        run: |
           $ANDROID_HOME/emulator/emulator -avd test -no-window -no-audio -gpu swiftshader_indirect &
           adb wait-for-device
           adb shell input keyevent 82
 
-      - name: Verify environment
-        run: |
-          java -version
-          adb version
-          echo $ANDROID_HOME
-
-      - name: Run Appium tests
+      - name: Run Appium tests via Maven
         run: mvn clean test
 
       - name: Generate GitHub Actions summary
         if: always()
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const fs = require('fs');
-            const surefirePath = 'target/surefire-reports';
-            if (!fs.existsSync(surefirePath)) return;
-            const xml2js = require('xml2js');
-            const parser = new xml2js.Parser();
-            let summary = '### Appium Test Summary\n\n| Test | Status |\n| --- | --- |\n';
-            const files = fs.readdirSync(surefirePath).filter(f => f.endsWith('.xml'));
-            for (const file of files) {
-              const content = fs.readFileSync(`${surefirePath}/${file}`, 'utf8');
-              parser.parseString(content, (err, result) => {
-                if (err) return;
-                const tests = result.testsuite.testcase || [];
-                tests.forEach(t => {
-                  const name = t.$.name;
-                  const status = t.failure ? 'FAILED' : 'PASSED';
-                  summary += `| ${name} | ${status} |\n`;
-                });
-              });
-            }
-            github.actions.summary.addRaw(summary).write();
+        run: |
+          if [ -f target/surefire-reports/TEST-*.xml ]; then
+            echo "### Test Summary" >> $GITHUB_STEP_SUMMARY
+            grep '<testcase ' target/surefire-reports/TEST-*.xml | while read line; do
+              TEST_NAME=$(echo $line | sed -n 's/.*classname="\([^"]*\)".*/\1/p')
+              if [[ $line == *'failure'* ]]; then
+                STATUS="❌ Failed"
+              else
+                STATUS="✅ Passed"
+              fi
+              echo "| $TEST_NAME | $STATUS |" >> $GITHUB_STEP_SUMMARY
+            done
+          else
+            echo "No test reports found" >> $GITHUB_STEP_SUMMARY
