--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -17,14 +17,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Install basic tools
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y tar unzip curl wget
+
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 11
-
-      - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -y unzip curl wget
 
       - name: Install Android SDK command line tools
         run: |
